--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,11 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 [dependencies]
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.49", default-features = false }
+display-interface-spi = "0.5.0"
+embedded-graphics = "0.8.1"
+mipidsi = "0.8.0"
+u8g2-fonts = { version = "0.4.0", features = ["embedded_graphics_textstyle"] }
+thiserror = "1.0.64"
 
 [build-dependencies]
 embuild = "0.32.0"
